# pyirf

./: .buildinfo  .gitignore  .mailmap  .prospector.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS  AUTHORS.html  CHANGES.rst  CODEOWNERS  LICENSE  MANIFEST.in  README.md  README.rst  binning.html  changelog.html  contribute.html  cut_optimization.html  cuts.html  download_irfs.py  download_private_data.sh  download_test_data.sh  environment.yml  examples.html  gammapy.html  genindex.html  index.html  install.html  interpolation.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sensitivity.html  setup.cfg  setup.py  simulation.html  (+3 more)
.github/workflows/: ci.yml  deploy.yml
_modules/: index.html
_modules/pyirf/: binning.html  cut_optimization.html  cuts.html  gammapy.html  sensitivity.html  simulations.html  spectral.html  statistics.html  utils.html
_sources/: AUTHORS.rst.txt  binning.rst.txt  contribute.rst.txt  examples.rst.txt  gammapy.rst.txt  install.rst.txt  interpolation.rst.txt  sensitivity.rst.txt  spectral.rst.txt
_sources/api/: pyirf.benchmarks.angular_resolution.rst.txt  pyirf.benchmarks.energy_bias_resolution.rst.txt  pyirf.benchmarks.energy_bias_resolution_from_energy_dispersion.rst.txt  pyirf.binning.add_overflow_bins.rst.txt  pyirf.binning.bin_center.rst.txt  pyirf.binning.calculate_bin_indices.rst.txt  pyirf.binning.create_bins_per_decade.rst.txt  pyirf.binning.create_histogram_table.rst.txt  pyirf.binning.join_bin_lo_hi.rst.txt  pyirf.binning.resample_histogram1d.rst.txt  pyirf.binning.split_bin_lo_hi.rst.txt  pyirf.cut_optimization.optimize_gh_cut.rst.txt  pyirf.cuts.calculate_percentile_cut.rst.txt  pyirf.cuts.compare_irf_cuts.rst.txt  pyirf.cuts.evaluate_binned_cut.rst.txt  pyirf.cuts.evaluate_binned_cut_by_index.rst.txt  pyirf.gammapy.create_effective_area_table_2d.rst.txt  pyirf.gammapy.create_energy_dispersion_2d.rst.txt  pyirf.gammapy.create_psf_3d.rst.txt  pyirf.interpolation.BaseComponentEstimator.rst.txt  pyirf.interpolation.BaseExtrapolator.rst.txt  pyirf.interpolation.BaseInterpolator.rst.txt  pyirf.interpolation.BaseNearestNeighborSearcher.rst.txt  pyirf.interpolation.DiscretePDFComponentEstimator.rst.txt  pyirf.interpolation.DiscretePDFExtrapolator.rst.txt  pyirf.interpolation.DiscretePDFInterpolator.rst.txt  pyirf.interpolation.DiscretePDFNearestNeighborSearcher.rst.txt  pyirf.interpolation.EffectiveAreaEstimator.rst.txt  pyirf.interpolation.EnergyDispersionEstimator.rst.txt  pyirf.interpolation.GridDataInterpolator.rst.txt  pyirf.interpolation.MomentMorphInterpolator.rst.txt  pyirf.interpolation.MomentMorphNearestSimplexExtrapolator.rst.txt  pyirf.interpolation.PDFNormalization.rst.txt  pyirf.interpolation.PSFTableEstimator.rst.txt  pyirf.interpolation.ParametrizedComponentEstimator.rst.txt  pyirf.interpolation.ParametrizedExtrapolator.rst.txt  pyirf.interpolation.ParametrizedInterpolator.rst.txt  pyirf.interpolation.ParametrizedNearestNeighborSearcher.rst.txt  pyirf.interpolation.ParametrizedNearestSimplexExtrapolator.rst.txt  pyirf.interpolation.ParametrizedVisibleEdgesExtrapolator.rst.txt  (+40 more)
_sources/io/: index.rst.txt
_sources/irf/: index.rst.txt
_sources/notebooks/: fact_example.ipynb.txt  index.rst.txt
api/: pyirf.benchmarks.angular_resolution.html  pyirf.benchmarks.energy_bias_resolution.html  pyirf.benchmarks.energy_bias_resolution_from_energy_dispersion.html  pyirf.binning.add_overflow_bins.html  pyirf.binning.bin_center.html  pyirf.binning.calculate_bin_indices.html  pyirf.binning.create_bins_per_decade.html  pyirf.binning.create_histogram_table.html  pyirf.binning.join_bin_lo_hi.html  pyirf.binning.resample_histogram1d.html  pyirf.binning.split_bin_lo_hi.html  pyirf.cut_optimization.optimize_gh_cut.html  pyirf.cuts.calculate_percentile_cut.html  pyirf.cuts.compare_irf_cuts.html  pyirf.cuts.evaluate_binned_cut.html  pyirf.cuts.evaluate_binned_cut_by_index.html  pyirf.gammapy.create_effective_area_table_2d.html  pyirf.gammapy.create_energy_dispersion_2d.html  pyirf.gammapy.create_psf_3d.html  pyirf.interpolation.BaseComponentEstimator.html  pyirf.interpolation.BaseExtrapolator.html  pyirf.interpolation.BaseInterpolator.html  pyirf.interpolation.BaseNearestNeighborSearcher.html  pyirf.interpolation.DiscretePDFComponentEstimator.html  pyirf.interpolation.DiscretePDFExtrapolator.html  pyirf.interpolation.DiscretePDFInterpolator.html  pyirf.interpolation.DiscretePDFNearestNeighborSearcher.html  pyirf.interpolation.EffectiveAreaEstimator.html  pyirf.interpolation.EnergyDispersionEstimator.html  pyirf.interpolation.GridDataInterpolator.html  pyirf.interpolation.MomentMorphInterpolator.html  pyirf.interpolation.MomentMorphNearestSimplexExtrapolator.html  pyirf.interpolation.PDFNormalization.html  pyirf.interpolation.PSFTableEstimator.html  pyirf.interpolation.ParametrizedComponentEstimator.html  pyirf.interpolation.ParametrizedExtrapolator.html  pyirf.interpolation.ParametrizedInterpolator.html  pyirf.interpolation.ParametrizedNearestNeighborSearcher.html  pyirf.interpolation.ParametrizedNearestSimplexExtrapolator.html  pyirf.interpolation.ParametrizedVisibleEdgesExtrapolator.html  (+40 more)
benchmarks/: index.html
docs/: AUTHORS.rst  changelog.rst  conf.py  contribute.rst  cut_optimization.rst  cuts.rst  examples.rst  gammapy.rst  index.rst  install.rst  interpolation.rst  introduction.rst  lstchain_irf.rst  requirements.txt  simulation.rst  spectral.rst  statistics.rst  utils.rst
examples/: calculate_eventdisplay_irfs.py  comparison_with_EventDisplay.ipynb  interpol_irf.json  interpol_irf.py  plot_spectra.py
io/: index.html
irf/: index.html
notebooks/: comparison_with_EventDisplay.ipynb  fact_example.html  fact_example.ipynb  index.html  irf_maker.ipynb  test_EventDisplay.ipynb
pyirf/: __init__.py  binning.py  compat.py  conftest.py  coordinates.py  cut_optimization.py  cuts.py  exceptions.py  gammapy.py  interpolation.py  plot.py  sensitivity.py  sensitiviy.py  simulations.py  spectral.py  statistics.py  utils.py  validation.py  version.py
pyrf/: __init__.py
(+166 files in other folders)
