[metadata]
name = pyirf
description = Python IACT IRF builder,
url = https://github.com/cta-observatory/pyirf
author = CTA Consortium, Analysis and Simulation Working Group
author_email = thomas.vuillaume@lapp.in2p3.fr
license = MIT
long_description = file: README.rst
github_project = cta-observatory/pyirf

[options]
python_requires = >=3.6
